frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versus-frontend
  labels:
    app: versus-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: versus-frontend
  template:
    metadata:
      labels:
        app: versus-frontend
    spec:
      containers:
      - name: versus-frontend
        image: 036692858685.dkr.ecr.us-east-1.amazonaws.com/versus-frontend:IMAGE_VERSION
        ports:
        - containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  name: versus-frontend-svc
spec:
  selector:
    app: versus-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
